--- a/learn/package.json
+++ b/learn/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pages:build": "npx @cloudflare/next-on-pages@1 build",
+    "preview": "wrangler pages dev .vercel/output/static",
+    "deploy": "wrangler pages deploy .vercel/output/static"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
@@ -22,8 +25,5 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4"
-  },
-  "pages:build": "npx @cloudflare/next-on-pages",
-  "preview": "npm run pages:build && wrangler pages dev",
-  "deploy": "npm run pages:build && wrangler pages deploy"
+  }
 }
